--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 }
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
+p,
 h1,
 h2,
 h3,
@@ -46,10 +47,32 @@ a {
   cursor: pointer;
 }
 
+.paragraph {
+  max-width: 330px;
+  margin: auto;
+  padding: 10px;
+}
+
 .logo {
-  margin: 0 0 100px 0;
+  margin: 0 0 50px 0;
   width: 149px;
   height: 221px;
+  transform: scale(1.1);
+}
+
+input {
+  height: 35px;
+  width: 250px;
+  border: solid 1px var(--color-primary);
+  padding: 10px;
+  font-family: "Lato";
+  font-weight: 900;
+  text-align: center;
+}
+input:focus {
+  height: 35px;
+  border: solid 2px var(--color-primary-active);
+  padding: 10px;
 }
 
 .option-button {
@@ -61,7 +84,7 @@ a {
   font-family: "Lato", cursive;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 15px;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
@@ -69,6 +92,23 @@ a {
 
 /*Closing Global Styles */
 
+/*<--------------------->*/
+
+/*COMPONENT: HomeUsers*/
+
+.homeuser-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+/*Closing COMPONENT: HomeUsers Styles */
+
+/*<--------------------->*/
 /*COMPONENT: HomeGuest*/
 
 .homeguest-container {
@@ -163,6 +203,7 @@ a {
 
 .button-menu {
   min-width: 15%;
+  cursor: pointer;
   background-color: var(--color-primary);
   height: 100%;
   display: flex;
