--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
 /*Global Styles */
+
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
 :root {
   --color-primary: #00cf88;
   --color-primary-active: #268766;
   --color-secondary: #263238;
-}
-.homeuser-container {
-  background: #fff;
-}
-
-.fullscreen-enabled .my-component {
-  background: #fff !important;
+  --color-lines: #c4c4c4;
 }
 * {
   margin: 0;
@@ -17,9 +14,6 @@
   box-sizing: border-box;
   border: none;
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
 p,
 h1,
 h2,
@@ -37,17 +31,59 @@ h2 {
   font-size: 1.3em;
 }
 h4 {
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-weight: 400;
 }
 h5 {
-  font-size: 0.9em;
+  font-size: 1em;
   font-weight: 400;
 }
 
 a {
   text-decoration: none;
+  color: var(--color-secondary) !important;
 }
+
+.homeuser-container {
+  background: #fff;
+}
+
+.fullscreen-enabled .my-component {
+  background: #fff !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--color-primary-active);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary-active);
+}
+
+@media only screen and (max-width: 727px) {
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .underline {
   text-decoration: underline;
   color: var(--color-secondary);
@@ -88,7 +124,7 @@ input[type="tel"]:focus {
   background-color: var(--color-primary);
   color: white;
   cursor: pointer;
-  font-family: "Lato", cursive;
+  font-family: "Lato", sans-serif;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -257,7 +293,82 @@ input[type="tel"]:focus {
 
 /*<--------------------->*/
 
-/*COMPONENT: Peek*/
+/*POPUP COMPONENTS SHARED STYLES */
+
+.modal-component {
+  background-color: var(--color-primary);
+  border-radius: 20px 20px 20px 20px;
+  overflow: hidden;
+}
+
+.loading-screen-modal {
+  min-height: 75vh;
+  width: 320px;
+  background-color: white;
+  border-radius: 20px 20px 20px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-bar-component {
+  top: 0;
+  padding: 25px 5px 26px 10px;
+  height: 40px;
+  width: inherit;
+  background-color: var(--color-primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top-bar-component h3 {
+  color: white;
+}
+
+/*<--------Arrow Icon---------->*/
+
+.arrow-icon {
+  position: relative;
+  margin: 10px 0 0 5px;
+  width: 20px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.arrow {
+  width: 90%;
+  height: 2.5px;
+  background-color: white;
+  transform: rotate(-180deg);
+}
+
+.arrow::after,
+.arrow::before {
+  content: "";
+  position: absolute;
+  width: 60%;
+  height: 2.5px;
+  right: -4px;
+  background-color: white;
+}
+
+.arrow::after {
+  top: -3px;
+  transform: rotate(45deg);
+}
+
+.arrow::before {
+  top: 3px;
+  transform: rotate(-45deg);
+}
+/*<--------Arrow Icon---------->*/
+
+/*<--------------------->*/
+
+/*POPUP COMPONENTS SHARED STYLES CLOSED */
+
+/*COMPONENT EXCLUSIVE STYLES: Peek*/
 
 .peek {
   background-color: white;
@@ -297,81 +408,23 @@ input[type="tel"]:focus {
   color: var(--color-primary);
 }
 
-/*Closing COMPONENT: Peek */
+/*COMPONENT EXCLUSIVE STYLES: Peek */
 
 /*<--------------------->*/
 
-/*COMPONENT: Peek*/
-
-.modal-component {
-  background-color: var(--color-primary);
-  min-width: 300px;
-  min-height: 600px;
-  border-radius: 20px 20px 20px 20px;
-}
-
-.top-bar-component {
-  top: 0;
-  position: relative;
-  height: 40px;
-  width: inherit;
-  border-radius: 20px 20px 0px 0px;
-  background-color: var(--color-primary);
+/*COMPONENT EXCLUSIVE STYLES: userinfo*/
+.user-info {
+  background-color: white;
   display: flex;
-  justify-content: space-between;
-  padding: 25px 5px 25px 10px;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-}
-.top-bar-component h3 {
-  color: white;
-}
-
-/*<--------Arrow Icon---------->*/
-.arrow-icon {
-  position: relative;
-  margin: 10px 0 0 5px;
-  width: 20px;
-  height: 15px;
-  cursor: pointer;
+  text-align: center;
+  padding: 4%;
 }
 
-.arrow {
-  width: 90%;
-  height: 2.5px;
-  background-color: white;
-  transform: rotate(-180deg);
-}
-
-.arrow::after,
-.arrow::before {
-  content: "";
-  position: absolute;
-  width: 60%;
-  height: 2.5px;
-  right: -4px;
-  background-color: white;
-}
-
-.arrow::after {
-  top: -3px;
-  transform: rotate(45deg);
-}
-
-.arrow::before {
-  top: 3px;
-  transform: rotate(-45deg);
-}
-/*<--------Arrow Icon---------->*/
-
-.text-preview {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  cursor: pointer;
-  max-width: 300px;
-  padding: 0 0 0 11px;
+.component-userinfo .user-info {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .user-profile-image {
@@ -380,22 +433,14 @@ input[type="tel"]:focus {
   background-image: url(./assets/defaultphotouser.png);
   background-size: 50px;
   border-radius: 50%;
-}
-
-.user-info-component {
-  background-color: white;
-  height: 190px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  margin-bottom: 5px;
 }
 
 .progress {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 5px;
 }
 
 .progress-bar {
@@ -403,7 +448,8 @@ input[type="tel"]:focus {
   background-color: var(--color-primary);
   position: absolute;
   z-index: 0;
-  left: 75px;
+  max-width: 70%;
+  left: 55px;
 }
 
 .progress-badges {
@@ -423,46 +469,15 @@ input[type="tel"]:focus {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
-.gallery-user {
+.text-preview {
+  display: block;
   position: relative;
-  background-color: white;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  cursor: pointer;
-  padding: 0px 10px 15px 10px;
-}
-.mouseInfo {
-  background-color: lightcoral;
-}
-
-.wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-  max-width: 330px;
+  text-overflow: ellipsis;
   white-space: nowrap;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  min-height: 75px;
-}
-
-.wrapper p {
-  margin-left: 15% !important;
-  font-weight: bold;
-  color: grey;
-}
-
-.wrapper img {
-  width: 100px;
-  height: 75px;
-
-  object-fit: cover;
-  margin: 3px 8px;
-  height: 73px;
-  border-radius: 3px;
-  background-image: url(./assets/defaultgallery.png);
-  background-size: 100px;
+  cursor: pointer;
+  max-width: 300px;
+  padding: 0 0 0 11px;
 }
 
 .gallery-info {
@@ -472,18 +487,59 @@ input[type="tel"]:focus {
   flex-direction: row;
   padding: 0 10px;
 }
+
 .gallery-info div {
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin: 10px 0;
+  margin: 5px 0;
+}
+
+.gallery-user {
+  position: relative;
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  cursor: pointer;
+  padding: 0px 10px 5px 10px;
+}
+
+.gallery-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  width: 300px;
+  white-space: nowrap;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  height: 79px;
+}
+
+.gallery-wrapper p {
+  margin-left: 18% !important;
+  margin-top: 5% !important;
+  font-weight: bold;
+  color: grey;
+}
+
+.gallery-wrapper img {
+  width: 100px;
+  height: 75px;
+  object-fit: cover;
+  margin: 0px 8px;
+  border-radius: 3px;
+  background-image: url(./assets/defaultgallery.png);
+  background-size: 100px;
 }
 
 .arrow-gallery {
   border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
-  padding: 4px;
+  padding: 3px;
+  height: 7px;
+  border-radius: 2px;
 }
 
 .right {
@@ -494,34 +550,296 @@ input[type="tel"]:focus {
 .elem {
   display: inline-block;
 }
+
+.action-list {
+  background-color: white;
+  margin-top: 10px;
+  padding: 20px 20px;
+}
+
+.single-action {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.single-action img {
+  width: 32px;
+  height: 32px;
+  margin: 10px 20px 0px 0px;
+}
+
+.action-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.action-container .arrow-gallery {
+  position: relative !important;
+  margin: 15px;
+}
+
+.modal {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 5;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.modal-content {
+  width: 250px;
+  height: 150px;
+  background-color: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-buttons {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+.modal-buttons div {
+  width: 45%;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+}
+
+.modal-button-green {
+  background-color: var(--color-primary);
+}
+
+.modal-button-red {
+  background-color: #ff4949;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: About Me */
+
+/*<--------------------->*/
+
+/*COMPONENT EXCLUSIVE STYLES: Detailed*/
+
+.component-detailed {
+  height: 607px;
+  width: 320px;
+  background-color: white;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  padding: 0 20px;
+}
+
+.action-info {
+  border-bottom: var(--color-lines) 2px solid;
+  width: 100%;
+  margin-right: -20px;
+  display: flex;
+  align-content: center;
+  padding: 10px 0;
+}
+
+.action-container {
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  justify-content: space-between;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: Detailed */
+
+/*<--------------------->*/
+
+/*COMPONENT EXCLUSIVE STYLES: Gallery*/
+
 /* width */
-::-webkit-scrollbar {
-  height: 8px;
+.component-detailed::-webkit-scrollbar {
+  display: none;
+}
+.component-detailed .single-action img {
+  width: 14px;
+  height: 18px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px grey;
-  border-radius: 10px;
+.component-gallery {
+  height: 607px;
+  width: 320px;
+  background-color: white;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 10px;
+  -webkit-overflow-scrolling: touch;
+}
+.component-gallery img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  background-image: url(./assets/defaultgallery.png);
+  background-size: cover;
+  margin-top: 5px;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
+.component-gallery p {
+  text-align: center;
+}
+.component-gallery::-webkit-scrollbar {
+  display: none;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: Detailed */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: All Users*/
+
+.all-users {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.all-users .user-info {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
+
+.all-users-map-scape-area {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 4;
+}
+
+.all-users-content {
   background: var(--color-primary);
+  border-radius: 20px 20px 20px 20px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 5;
+  width: 320px;
+  max-height: 607px;
+}
+
+.all-users-content .top-bar-component {
+  justify-content: none;
+  padding: 8% 20% 8% 5%;
+}
+
+.all-users-group {
+  background-color: white;
+  margin-top: 7px;
+}
+
+.all-users-single {
+  display: flex;
+  align-content: center;
+  flex-direction: row;
+  cursor: pointer;
+  width: 320px;
+  padding: 10px 0px 10px 10px;
+  margin: 5px;
+}
+
+.all-users-single img {
+  width: 38px;
+  height: 38px;
+  background-image: url(./assets/defaultphotouser.png);
+  background-size: initial;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+
+.all-users-info {
+  width: 100%;
+  border-bottom: var(--color-lines) 2px solid;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  margin: 0px 0px 0px 10px;
+  padding: 5px 0px 15px 10px;
+}
+
+.all-users-info-container {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.all-users-info .modal-button-green {
+  width: 40%;
+  text-align: center;
+  border-radius: 5px;
+  padding: 2px 5px;
+  margin: 0px 6px -2px 0px;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-weight: bold !important;
+  font-size: 14px;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: All Users Popup */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: Documents*/
+
+.component-documents {
+  height: 607px;
+  width: 320px;
+  background-color: var(--color-primary);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+.component-documents::-webkit-scrollbar {
+  display: none;
+}
+
+.component-documents .user-info {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  width: inherit;
+}
+
+.document-list-container {
+  width: inherit;
+  height: inherit;
+  background-color: white;
+  margin-top: 7px;
+  padding: 17px;
+}
+
+.document-list-element {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:active {
-  background: var(--color-primary-active);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--color-primary-active);
-}
-
-@media only screen and (max-width: 727px) {
-  ::-webkit-scrollbar,
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  border-left: var(--color-primary) 10px solid;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin: 0px 0px 10px 0px;
 }
