A new folder structure

--- a/src/App.css
+++ b/src/App.css
@@ -843,3 +843,9 @@ input[type="tel"]:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin: 0px 0px 10px 0px;
 }
+
+/*COMPONENT EXCLUSIVE STYLES: Documents */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: MyPlants*/
