--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --color-primary-active: #268766;
   --color-secondary: #263238;
   --color-lines: #c4c4c4;
+  --color-terciary: #fff100;
 }
 * {
   margin: 0;
@@ -37,6 +38,10 @@ h4 {
 }
 h5 {
   font-size: 1em;
+  font-weight: 400;
+}
+h6 {
+  font-size: 0.8em;
   font-weight: 400;
 }
 
@@ -274,15 +279,17 @@ input[type="tel"]:focus {
 }
 
 .button-menu {
-  min-width: 15%;
+  min-width: 40px;
   cursor: pointer;
+  margin: none !important;
   background-color: var(--color-primary);
-  height: 100%;
+  height: 50px;
   display: flex;
   align-items: center;
-  padding: 0 0 0 5%;
+  padding: 0 0 0 25%;
   border-radius: 0px 25px 25px 0px;
 }
+
 .button-menu:after {
   content: " \2807";
   color: white;
@@ -1060,4 +1067,257 @@ input[type="tel"]:focus {
   font-family: "Varela Round", cursive;
   font-weight: bold;
   color: gray;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: Plants */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: MenuComponent*/
+.component-menu {
+  height: 100vh;
+  width: 100vw;
+  padding: none;
+  margin: auto;
+  overflow: hidden;
+}
+.top-bar-menu-component {
+  top: 0;
+  padding: 25px 5px 26px 10px;
+  height: 6%;
+  width: inherit;
+  background-color: var(--color-primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.component-menu-content {
+  height: 94%;
+}
+
+.top-bar-menu-component h3 {
+  color: white;
+}
+
+.top-bar-menu-component img {
+  image-resolution: initial;
+  width: 45px;
+  height: 45px;
+}
+
+/*COMPONENT EXCLUSIVE STYLES: Plants */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: MenuFirst*/
+
+.component-menufirst {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menufirst-options {
+  min-width: 275px;
+  padding: 30px;
+}
+
+.menufirst-single-option {
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+  height: 140px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 19px 0px 19px 19px;
+  border-radius: 10px;
+  margin: 30px 0px;
+  border-right: 43px var(--color-primary) solid;
+}
+
+.menufirst-single-option img {
+  background-color: var(--color-primary);
+  width: 69px;
+  height: 69px;
+  border-radius: 50px;
+  object-fit: scale-down;
+  padding: 9px;
+}
+
+.menufirst-single-option-text {
+  width: 80%;
+  margin: 0px 5px;
+  padding: 0px 10px;
+}
+
+.arrow-menu {
+  border: solid white;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 7px;
+  height: 10px;
+  margin-right: -25px;
+  border-radius: 3px;
+}
+
+.illustrations-menufirst {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.illustrations-menufirst img {
+  max-width: 221;
+}
+/*COMPONENT EXCLUSIVE STYLES: MenuFirst */
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: MenuLibrary*/
+
+.component-library {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  overflow: scroll;
+}
+
+.component-library-categories-container {
+  min-width: 275px;
+  margin: 10px;
+}
+
+.component-library-categories {
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 19px 0px 19px 19px;
+  border-radius: 10px;
+  margin: 18px 0px;
+  border-left: 19px var(--color-terciary) solid;
+}
+
+.component-library-categories div {
+  display: flex;
+  align-items: center;
+}
+.component-library-categories h5 {
+  margin-right: 5px;
+}
+
+.component-library-text {
+  text-align: center;
+  width: 275px;
+}
+
+.component-library-text h2 {
+  margin-bottom: 10px;
+}
+
+.arrow-library {
+  border: solid var(--color-terciary);
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 5px;
+  height: 7px;
+  margin-right: 10px;
+  border-radius: 3px;
+}
+
+/* EXCLUSIVE STYLES: MenuLibrary*/
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: LibraryCategory*/
+
+.component-library-category {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  overflow: scroll;
+}
+
+.component-library-category-categories {
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 19px;
+  border-radius: 10px;
+  margin: 18px 10px 18px 18px;
+  border-left: 19px var(--color-primary) solid;
+}
+
+/* EXCLUSIVE STYLES: LibraryCategory*/
+
+/*<--------------------->*/
+
+/* EXCLUSIVE STYLES: MenuDocuments*/
+.component-menuexchange {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  overflow: scroll;
+}
+.component-exchange-text {
+  text-align: center;
+  width: 177px;
+}
+
+.component-exchange-text h2 {
+  margin-bottom: 10px;
+}
+
+.menuexchange-options {
+  min-width: 245px;
+  padding: 30px;
+}
+
+.menuexchange-single-option {
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 19px;
+  border-radius: 10px;
+  margin: 30px 0px;
+  border-left: 20px var(--color-primary) solid;
+}
+
+.menuexchange-single-option-text {
+  padding: 10px;
+  width: 80%;
+}
+
+.arrow-menuexchange {
+  border: solid var(--color-primary);
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 7px;
+  height: 10px;
+
+  border-radius: 3px;
 }
