--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
   --color-secondary: #263238;
   --color-lines: #c4c4c4;
   --color-terciary: #ede221;
+  --height-profile-component: 607px;
+  --width-profile-component: 320px;
+  --width-menu-component: 275px;
 }
 * {
   margin: 0;
@@ -186,6 +189,18 @@ input[type="tel"]:focus {
 .leaflet-popup-tip-container {
   display: none;
 }
+
+.pulse {
+  z-index: 0 !important;
+}
+
+.leaflet-marker-icon {
+  margin-left: -55px !important;
+  margin-top: -55px !important;
+  width: 110px !important;
+  height: 110px !important;
+}
+
 .leaflet-popup .leaflet-popup-content-wrapper {
   margin: 0px;
   padding: 0px;
@@ -197,10 +212,9 @@ input[type="tel"]:focus {
 }
 
 .leaflet-popup-content {
-  margin: 0px !important;
+  margin: -5px !important;
   padding: 0px;
   width: 100% !important;
-  height: inherit;
 }
 /*Leaflet Override Styles */
 
@@ -214,12 +228,11 @@ input[type="tel"]:focus {
   position: absolute;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   z-index: 1;
   margin: auto;
-  left: 0;
-  right: 0;
-  width: 10%;
-  bottom: 3%;
+  bottom: 5%;
+  right: 2%;
 }
 
 .button-group-left {
@@ -247,11 +260,12 @@ input[type="tel"]:focus {
   padding: 3px;
   border-radius: 50%;
 }
+
 .button-rise {
   height: 51px;
   width: 51px;
   border-radius: 50%;
-  margin: 0 10px;
+  margin: 10px 0;
   background-color: var(--color-primary);
   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.3);
@@ -299,10 +313,10 @@ input[type="tel"]:focus {
   margin: auto;
   left: 0;
   right: 0;
-  top: 3vh;
+  top: 0;
   background-color: white;
   display: flex;
-  border-radius: 25px;
+
   align-content: center;
 }
 
@@ -315,17 +329,15 @@ input[type="tel"]:focus {
   min-width: 40px;
   cursor: pointer;
   margin: none !important;
-  background-color: var(--color-primary);
   height: 50px;
   display: flex;
   align-items: center;
   padding: 0 0 0 25%;
-  border-radius: 0px 25px 25px 0px;
 }
 
-.button-menu:after {
+.top-bar .button-menu:after {
   content: " \2807";
-  color: white;
+  color: var(--color-primary);
   font-size: 28px;
 }
 
@@ -334,22 +346,52 @@ input[type="tel"]:focus {
 /*<--------------------->*/
 
 /*POPUP COMPONENTS SHARED STYLES */
-
-.modal-component {
+.profile-component {
   background-color: var(--color-primary);
-  border-radius: 20px 20px 20px 20px;
-  overflow: hidden;
+  border-radius: 0px 0px 20px 20px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: var(--height-profile-component);
+  width: var(--width-profile-component);
+  -webkit-overflow-scrolling: touch;
+}
+
+.popup {
+  outline: 110vw solid rgba(255, 255, 255, 0.3);
+}
+/* width */
+.profile-component::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-color: transparent transparent;
+}
+
+.profile-component .user-info {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  padding: 4%;
+  width: inherit;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
+
+.component-detailed .single-action img {
+  width: 14px;
+  height: 18px;
 }
 
 .loading-screen-modal {
-  height: 70px;
-  width: 300px;
+  height: 50px;
+  min-width: 250px;
   background-color: white;
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 25px;
   display: flex;
+  align-content: center;
   justify-content: center;
-  align-items: center;
-  z-index: 20;
+  z-index: 7;
 }
 
 .top-bar-component {
@@ -357,16 +399,69 @@ input[type="tel"]:focus {
   padding: 25px 5px 26px 10px;
   border-radius: 20px 20px 0px 0px;
   height: 40px;
-  width: inherit;
+  width: 320px;
   background-color: var(--color-primary);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.top-bar-component .button-menu:after {
+  content: " \2807";
+  color: white;
+  font-size: 28px;
+}
+
 .top-bar-component h3 {
   color: white;
   margin-left: 20%;
+}
+
+.modal {
+  height: var(--height-profile-component);
+  width: var(--width-profile-component);
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 5;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.modal-content {
+  width: 250px;
+  height: 150px;
+  background-color: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-buttons {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+.modal-buttons div {
+  width: 45%;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+}
+
+.modal-button-green {
+  background-color: var(--color-primary);
+}
+
+.modal-button-red {
+  background-color: #ff4949;
 }
 
 /*<--------Arrow Icon---------->*/
@@ -423,17 +518,11 @@ input[type="tel"]:focus {
   padding: 2px;
 }
 
-.peek::after {
-  content: "";
-  position: relative;
-  z-index: -1;
-  outline: 110vw solid rgba(255, 255, 255, 0.3);
-}
-
 .peek img {
   height: 50px;
   width: 50px;
-  background-image: url(./assets/defaultphotouser.png);
+
+  background-repeat: no-repeat;
   background-size: 50px;
   border-radius: 50%;
 }
@@ -442,14 +531,11 @@ input[type="tel"]:focus {
 }
 
 .plus {
-  margin-right: -5px;
-  margin-bottom: 0px;
+  margin-right: 15px;
 }
 
 .plus::before {
   content: "+";
-  height: 18px;
-  width: 18px;
   font-size: 32px;
   display: flex;
   flex-direction: row;
@@ -466,25 +552,6 @@ input[type="tel"]:focus {
 
 /*COMPONENT EXCLUSIVE STYLES: userinfo*/
 
-.component-userinfo {
-  background-color: var(--color-primary);
-  border-radius: 0px 0px 20px 20px;
-  overflow: hidden;
-}
-.user-info {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  text-align: center;
-  padding: 4%;
-}
-
-.component-userinfo .user-info {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-}
-
 .user-profile-image {
   height: 90px;
   width: 90px;
@@ -495,6 +562,7 @@ input[type="tel"]:focus {
 }
 
 .progress {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -513,11 +581,21 @@ input[type="tel"]:focus {
 .progress-badges {
   z-index: 1;
   margin: 2px 10px;
-  width: 38px;
+  width: 50px;
+  height: 50px;
   background-color: white;
-  height: 38px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   border: 3px var(--color-primary) solid;
-  border-radius: 20px;
+  border-radius: 50px;
+}
+.progress-badges img {
+  z-index: 1;
+  width: 90px;
+  height: 90px;
+  margin-top: -23px;
 }
 
 .about-me {
@@ -639,69 +717,84 @@ input[type="tel"]:focus {
   margin: 15px;
 }
 
-.modal {
-  height: 100%;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
-  z-index: 5;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px 20px 20px 20px;
-}
+/*COMPONENT EXCLUSIVE STYLES: About Me */
 
-.modal-content {
-  width: 250px;
-  height: 150px;
+/*<--------------------->*/
+
+/*COMPONENT EXCLUSIVE STYLES: Badge*/
+
+.profile-component .badges-component {
   background-color: white;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  padding: 25px;
   display: flex;
   flex-direction: column;
-}
-
-.modal-buttons {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-  margin: 20px 0;
-}
-.modal-buttons div {
-  width: 45%;
+  align-items: center;
   text-align: center;
-  border-radius: 5px;
-  padding: 5px;
-  color: white;
-  font-weight: bold;
+  padding: 4%;
+  width: inherit;
+  height: 100%;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
-.modal-button-green {
-  background-color: var(--color-primary);
+.user-image-badge {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  width: 90%;
+  margin: 10px 0 30px 0;
+  padding: 10px 0;
+  border-bottom: 2px var(--color-lines) solid;
 }
 
-.modal-button-red {
-  background-color: #ff4949;
+.user-profile-badge {
+  position: absolute;
+  right: 50px;
+  top: 0;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border: 3px var(--color-primary) solid;
+  border-radius: 50px;
 }
 
-/*COMPONENT EXCLUSIVE STYLES: About Me */
+.user-image-badge h5 {
+  color: var(--color-primary) !important;
+}
+
+.user-profile-badge img {
+  z-index: 1;
+  width: 90px;
+  height: 90px;
+  margin-top: -23px;
+}
+
+.user-profile-image-badge {
+  border: 3px var(--color-primary) solid;
+  height: 120px;
+  width: 120px;
+  align-self: center;
+  background-image: url(./assets/defaultphotouser.png);
+  background-size: 50px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+/*COMPONENT EXCLUSIVE STYLES: Badge */
 
 /*<--------------------->*/
 
 /*COMPONENT EXCLUSIVE STYLES: Detailed*/
 
-.component-detailed {
-  height: 607px;
-  width: 320px;
-  background-color: var(--color-primary);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-.component-detailed .user-info {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+.information-component .single-action img {
+  width: 15px;
+  height: 15px;
+  margin: 10px 20px 0px 0px;
 }
 
 .action-info {
@@ -731,28 +824,12 @@ input[type="tel"]:focus {
 /*<--------------------->*/
 
 /*COMPONENT EXCLUSIVE STYLES: Gallery*/
-
-/* width */
-.component-detailed::-webkit-scrollbar {
-  display: none;
-  -ms-overflow-style: none;
-  scrollbar-color: transparent transparent;
-}
-.component-detailed .single-action img {
-  width: 14px;
-  height: 18px;
-}
-
-.component-gallery {
-  height: 607px;
-  width: 320px;
+.gallery {
   background-color: white;
-  overflow-y: scroll;
-  overflow-x: hidden;
   padding: 10px;
-  -webkit-overflow-scrolling: touch;
 }
-.component-gallery img {
+
+.gallery img {
   width: 100%;
   height: 50%;
   object-fit: cover;
@@ -760,14 +837,8 @@ input[type="tel"]:focus {
   background-size: cover;
   margin-top: 5px;
 }
-
-.component-gallery p {
+.gallery p {
   text-align: center;
-}
-.component-gallery::-webkit-scrollbar {
-  display: none;
-  -ms-overflow-style: none;
-  scrollbar-color: transparent transparent;
 }
 
 /*COMPONENT EXCLUSIVE STYLES: Detailed */
@@ -788,7 +859,13 @@ input[type="tel"]:focus {
 }
 
 .all-users .user-info {
+  background-color: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 5% 15%;
 }
 
 .all-users-map-scape-area {
@@ -808,8 +885,8 @@ input[type="tel"]:focus {
   align-items: center;
   flex-direction: column;
   z-index: 5;
-  width: 320px;
-  max-height: 607px;
+  width: var(--width-profile-component);
+  max-height: var(--height-profile-component);
 }
 
 .all-users-content .top-bar-component {
@@ -830,7 +907,7 @@ input[type="tel"]:focus {
   align-content: center;
   flex-direction: row;
   cursor: pointer;
-  width: 320px;
+  width: var(--width-profile-component);
   padding: 8px 0px 10px 10px;
   margin: 5px;
 }
@@ -880,24 +957,6 @@ input[type="tel"]:focus {
 
 /* EXCLUSIVE STYLES: Documents*/
 
-.component-documents {
-  height: 607px;
-  width: 320px;
-  background-color: var(--color-primary);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-
-.component-documents::-webkit-scrollbar {
-  display: none;
-}
-
-.component-documents .user-info {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  width: inherit;
-}
-
 .document {
   width: 90%;
 }
@@ -927,24 +986,6 @@ input[type="tel"]:focus {
 /*<--------------------->*/
 
 /* EXCLUSIVE STYLES: Exchange*/
-
-.component-exchange {
-  height: 607px;
-  width: 320px;
-  background-color: var(--color-primary);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-
-.component-exchange::-webkit-scrollbar {
-  display: none;
-}
-
-.component-exchange .user-info {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  width: inherit;
-}
 
 .products-list-container {
   height: 100%;
@@ -1067,33 +1108,11 @@ input[type="tel"]:focus {
   justify-content: center;
 }
 
-.component-detailed {
-  height: 607px;
-  width: 320px;
-  background-color: var(--color-primary);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-
 /*COMPONENT EXCLUSIVE STYLES: Exchange */
 
 /*<--------------------->*/
 
 /* EXCLUSIVE STYLES: Plants*/
-
-.component-plants {
-  height: 607px;
-  width: 320px;
-  background-color: var(--color-primary);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-
-.component-plants::-webkit-scrollbar {
-  display: none;
-}
 
 .plant-info {
   border-bottom: 2px var(--color-lines) solid;
@@ -1171,7 +1190,7 @@ input[type="tel"]:focus {
 }
 
 .menufirst-options {
-  min-width: 275px;
+  min-width: var(--width-menu-component);
   padding: 30px;
 }
 
@@ -1240,7 +1259,7 @@ input[type="tel"]:focus {
 }
 
 .component-library-categories-container {
-  min-width: 275px;
+  min-width: var(--width-menu-component);
   margin: 10px;
 }
 
@@ -1268,7 +1287,7 @@ input[type="tel"]:focus {
 
 .component-library-text {
   text-align: center;
-  width: 275px;
+  width: 20%;
 }
 
 .component-library-text h2 {
