--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   --color-secondary: #263238;
   --color-lines: #c4c4c4;
   --color-terciary: #ede221;
-  --height-profile-component: 607px;
+  --height-profile-component: 540px;
   --width-profile-component: 320px;
   --width-menu-component: 275px;
 }
@@ -488,8 +488,16 @@ input[type="tel"]:focus {
   height: 100%;
   width: 100%;
   position: absolute;
-
   z-index: 3;
+}
+
+.close-picked {
+  margin-left: 95%;
+  cursor: pointer;
+  font-size: 1.5em;
+  font-family: "Varela Round", cursive;
+  font-weight: bold;
+  color: gray;
 }
 
 .picked {
@@ -497,7 +505,7 @@ input[type="tel"]:focus {
   width: 90%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
-  padding: 15px;
+  padding: 10px 15px;
   z-index: 5;
 }
 
@@ -505,17 +513,16 @@ input[type="tel"]:focus {
   background-color: white;
   display: flex;
   align-items: center;
-  padding: 10px 0px;
-  margin: 10px 0px;
+  padding: 5px 0px;
 }
 
 .picked-owner img {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   margin-right: 10px;
   object-fit: cover;
   background-repeat: no-repeat;
-  background-size: 50px;
+
   border-radius: 50%;
 }
 .picked-owner h4 {
@@ -544,6 +551,7 @@ input[type="tel"]:focus {
 
 .picked-gallery-wrapper img {
   width: 85%;
+  height: 150px;
   object-fit: cover;
   margin: 0px 8px;
   border-radius: 3px;
@@ -808,7 +816,7 @@ input[type="tel"]:focus {
 .about-me {
   margin: 8px 0;
   background-color: white;
-  padding: 10px 0 10px 5px;
+  padding: 10px 0 10px 15px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -884,9 +892,12 @@ input[type="tel"]:focus {
 }
 
 .action-list {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   margin-top: 10px;
-  padding: 20px 20px;
+  padding: 20px;
+  height: 27%;
 }
 
 .single-action {
@@ -1050,6 +1061,22 @@ input[type="tel"]:focus {
 }
 .gallery p {
   text-align: center;
+}
+.image-view {
+  height: inherit;
+  background-color: black;
+}
+/*React Quick */
+.kvfysmfp {
+  height: 100%;
+}
+.close-image-view {
+  margin-left: 93%;
+  cursor: pointer;
+  font-size: 2em;
+  font-family: "Varela Round", cursive;
+  font-weight: bold;
+  color: white;
 }
 
 /*COMPONENT EXCLUSIVE STYLES: Detailed */
@@ -1223,15 +1250,6 @@ input[type="tel"]:focus {
   background-image: url(./assets/defaultphotouser.png);
   background-size: 50px;
   border-radius: 50%;
-}
-
-.close-picked {
-  margin-left: 90%;
-  cursor: pointer;
-  font-size: 1.5em;
-  font-family: "Varela Round", cursive;
-  font-weight: bold;
-  color: gray;
 }
 
 /*COMPONENT EXCLUSIVE STYLES: Plants */
